# p2c_growth_ltd_booking_platform

./: .env.example  .gitignore  AGENTS.md  JIRA_LOG.md  Makefile  PR_DESCRIPTION.md  README.md  components.json  next.config.mjs  package-lock.json  package.json  skills-lock.json  supabase-setup.sql  supabase-update-phase2.sql  tailwind.config.ts  vercel.json
.ai/: workflow.md
.gemini/: settings.json
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
components/: contact-form.tsx  site-shell.tsx
docs/: Bao_gia_He_thong_Booking_Y_khoa_V5.docx  GEMINI_UI_HANDOFF.md  P2C_Growth_PRD_v1.md  supabase-schema.md  (+2 more)
vms/vms/install/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  for-claude-code.md  for-codex.md  for-copilot.md  for-cursor.md  for-gemini.md  install.ps1  install.sh
vms/vms/install/.ai/vms-orchestration/: README.md  project-context.md
vms/vms/install/.ai/vms-orchestration/pipeline/: v1.yaml
vms/vms/install/.ai/vms-orchestration/prompts/: developer.md  orchestrator.md
vms/vms/install/.github/: pull_request_template.md
vms/vms/install/src/: cli.rs  installer.rs  lib.rs  main.rs  utils.rs
vms/vms/install/src/app/: mod.rs  tasks.rs  tui.rs
vms/vms/install/src/models/: agent.rs  component.rs  credentials.rs  error.rs  mcp.rs  mod.rs  report.rs  role.rs  tui.rs
vms/vms/install/src/ui/: mod.rs  popups.rs  preview.rs  sidebar.rs
vms/vms/install/src/ui/content/: agents.rs  components.rs  credentials.rs  install.rs  mod.rs  summary.rs  welcome.rs
vms/vms/install/tests/: cli.rs  install_logic.rs  mcp_docs.rs  tui_logic.rs
(+151 files in other folders)
