[package]
name = "vms-sync"
version = "0.2.0"
edition = "2024"

[lib]
name = "vms_sync"
path = "src/lib.rs"

[[bin]]
name = "vms-sync"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
clap = { version = "4.5", features = ["derive"] }
